--- a/index.html
+++ b/index.html
@@ -3,16 +3,31 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Breno Bezerra Franco" />
+    <meta name="keywords" content="Notícias,Portal,Jornal" />
     <title>Portal de Notícias</title>
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="shortcut icon" href="img/icons8-notícias-16.png"type="image/x-icon"/>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link rel="shortcut icon "href="img/icons8-notícias-16.png" type="image/x-icon"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"rel="stylesheet"/>
   </head>
   <body>
     <header>
       <h1>Portal News</h1>
+      <h2>Notícias de Hoje</h2>
     </header>
+    <section class="news">
+      <article>
+        <h2></h2>
+        <img src="" alt="" />
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus,
+          doloribus temporibus! Sunt vitae sequi repellat fugit. Id numquam
+          aspernatur ducimus sunt, incidunt quaerat magnam, saepe soluta
+          cupiditate ratione hic molestiae!
+        </p>
+      </article>
+    </section>
   </body>
 </html>
